--- a/Stance/Base.lproj/Main.storyboard
+++ b/Stance/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qKG-GK-soZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="e0A-6e-Jov">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -616,10 +616,10 @@
             </objects>
             <point key="canvasLocation" x="2075.36231884058" y="1630.5803571428571"/>
         </scene>
-        <!--View Controller-->
+        <!--Rep Counter View Controller-->
         <scene sceneID="IS2-n4-MYO">
             <objects>
-                <viewController id="e0A-6e-Jov" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RepCounterViewController" id="e0A-6e-Jov" customClass="RepCounterViewController" customModule="Stance" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="nYx-Xf-fqu"/>
                         <viewControllerLayoutGuide type="bottom" id="0XZ-lF-EUx"/>
@@ -627,12 +627,40 @@
                     <view key="view" contentMode="scaleToFill" id="aqG-1C-SuM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JeC-nH-J0V">
+                                <rect key="frame" x="97" y="338" width="220" height="220"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ic4-hf-2Cu">
+                                        <rect key="frame" x="92.5" y="69" width="35" height="82"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="60"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ic4-hf-2Cu" firstAttribute="centerX" secondItem="JeC-nH-J0V" secondAttribute="centerX" id="Gjc-k0-iO9"/>
+                                    <constraint firstAttribute="height" constant="220" id="MCD-EG-NGh"/>
+                                    <constraint firstAttribute="width" constant="220" id="QaS-gt-6pg"/>
+                                    <constraint firstItem="ic4-hf-2Cu" firstAttribute="centerY" secondItem="JeC-nH-J0V" secondAttribute="centerY" id="Uem-Gk-cCO"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="JeC-nH-J0V" firstAttribute="centerX" secondItem="aqG-1C-SuM" secondAttribute="centerX" id="Gxd-mZ-H3X"/>
+                            <constraint firstItem="JeC-nH-J0V" firstAttribute="centerY" secondItem="aqG-1C-SuM" secondAttribute="centerY" id="QQT-H7-Pdy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="countLB" destination="ic4-hf-2Cu" id="xv1-O8-37o"/>
+                        <outlet property="counterView" destination="JeC-nH-J0V" id="iTR-Dl-DOW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VM1-pO-kJD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3338" y="1649"/>
+            <point key="canvasLocation" x="3337.68115942029" y="1648.6607142857142"/>
         </scene>
         <!--Left Menu View Controller-->
         <scene sceneID="adT-Xg-tsL">
